<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/customlayout"
    android:background="@drawable/dialog_bg"
    tools:context=".custom_filter">

    <LinearLayout
        android:id="@+id/layout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            >

            <TextView
                android:id="@+id/txt_fromdate_custom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/txt_todate_custom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="60dp"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">


            <Button
                android:id="@+id/btn_fromdate_custom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:padding="5dp"
                android:text="From"
                android:radius="24dp"
                android:textColor="@color/black"
                android:backgroundTint="#FF8849"
                android:layout_margin="10dp"
                android:layout_marginLeft="10dp"
                android:onClick="btnFromDate"/>

            <Button
                android:id="@+id/btn_todate_custom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textColor="@color/black"
                android:padding="5dp"
                android:text="to"
                android:radius="24dp"
                android:backgroundTint="#FF8849"
                android:layout_margin="10dp"
                android:layout_marginLeft="10dp"
                android:onClick="btnToDate"/>

        </LinearLayout>

        <TextView
            android:id="@+id/txtcat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Category"
            android:textStyle="bold"
            android:textSize="20dp">
        </TextView>

        <LinearLayout
            android:id="@+id/layout4"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <com.google.android.material.chip.ChipGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                app:chipSpacing="25dp"
                android:id="@+id/expense_chipgrp"
                app:singleSelection="false">
                <com.google.android.material.chip.Chip
                    android:id="@+id/chip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text"
                    android:checked="true"
                    style="@style/Widget.MaterialComponents.Chip.Choice"/>

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text1"
                    style="@style/Widget.MaterialComponents.Chip.Choice"/>

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text2"
                    style="@style/Widget.MaterialComponents.Chip.Choice"/>

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text3"
                    android:backgroundTint="#e2f5d0"
                    style="@style/Widget.MaterialComponents.Chip.Choice"/>

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text4"
                    style="@style/Widget.MaterialComponents.Chip.Choice"/>

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text5"
                    style="@style/Widget.MaterialComponents.Chip.Choice"/>
                <com.google.android.material.chip.Chip
                    android:id="@+id/chip6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text6"
                    style="@style/Widget.MaterialComponents.Chip.Choice"/>

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text8"
                    style="@style/Widget.MaterialComponents.Chip.Choice"/>


                <com.google.android.material.chip.Chip
                    android:id="@+id/chip9"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text9"
                    android:backgroundTint="#e2f5d0"
                    style="@style/Widget.MaterialComponents.Chip.Choice"/>


                <com.google.android.material.chip.Chip
                    android:id="@+id/chip10"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text10"
                    android:backgroundTint="#e2f5d0"
                    style="@style/Widget.MaterialComponents.Chip.Choice"/>

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text7"
                    style="@style/Widget.MaterialComponents.Chip.Choice"/>
            </com.google.android.material.chip.ChipGroup>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:id="@+id/txtpayment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Payment mode"
            android:textStyle="bold"
            android:textSize="20dp">
        </TextView>

        <LinearLayout
            android:id="@+id/layout6"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/payment_chipgrp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                app:chipSpacing="25dp"
                app:singleSelection="false">

                <com.google.android.material.chip.Chip
                    android:id="@+id/allpaymode"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/textall"
                    android:checked="true"
                    style="@style/Widget.MaterialComponents.Chip.Choice"/>

                <com.google.android.material.chip.Chip
                    android:id="@+id/cash"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/textcash"
                    style="@style/Widget.MaterialComponents.Chip.Choice"/>
                <com.google.android.material.chip.Chip
                    android:id="@+id/card"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/textcard"
                    style="@style/Widget.MaterialComponents.Chip.Choice"/>
            </com.google.android.material.chip.ChipGroup>
        </LinearLayout>

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

        <Button
            android:id="@+id/click_changes"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="Apply to click changes"
            />


    </LinearLayout>

</LinearLayout>